# html-converter-kata

./: README.md  pyproject.toml
html_converter_kata/: html_converter.py  html_pages_converter.py  unicode_file_to_html_text_converter.py
tests/: TestUnicodeFileToHtmlTextConverter.test_html_converter.approved.txt  conftest.py  test_file.txt  test_html_converter.py  test_pages_converter.py  test_unicode_file_to_html_text_converter.py
