[tool.poetry]
name = "html-converter-kata"
version = "0.1.0"
description = ""
authors = ["dimanu <diego.martinez@frenetic.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
